--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,5 +22,5 @@ jobs:
 
     - name: Build and push
       run: |
-        docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/rag-webapp:v2 .
-        docker push ${{ secrets.ACR_LOGIN_SERVER }}/rag-webapp:v2
+        docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/rag-webapp:latest .
+        docker push ${{ secrets.ACR_LOGIN_SERVER }}/rag-webapp:latest 
